.next/dev/logs/next-development.log
[00:00:00.821] Server  LOG      ✓ Ready in 536ms
[00:00:07.194] Browser INFO    %cDownload the React DevTools for a better development experience: https://react.dev/link/react-devtools font-weight:bold
[00:00:07.359] Browser LOG     %c[Vercel Web Analytics]%c Debug mode is enabled by default in development. No requests will be sent to the server. color: rgb(120, 120, 120) color: inherit
[00:00:07.359] Browser LOG     %c[Vercel Web Analytics]%c Running queued event color: rgb(120, 120, 120) color: inherit pageview {"path":"/","route":"/"}
[00:00:07.359] Browser LOG     %c[Vercel Web Analytics]%c [pageview] http://localhost:3000/ color: rgb(120, 120, 120) color: inherit {"dp":"/","o":"http://localhost:3000/","r":"","sdkn":"@vercel/analytics/next","sdkv":"1.3.1","sv":"0.1.3","ts":1765099022822}
[00:01:00.205] Server  LOG      ✓ Compiled in 110ms
[00:01:00.467] Browser ERROR   ./ngo2/app/globals.css
Error evaluating Node.js code
Error: It looks like you're trying to use `tailwindcss` directly as a PostCSS plugin. The PostCSS plugin has moved to a separate package, so to continue using Tailwind CSS with PostCSS you'll need to install `@tailwindcss/postcss` and update your PostCSS configuration.
    [at at (C:\Users\SNEHA PANDEY\ngo2\node_modules\tailwindcss\dist\lib.js:38:1629)]
    [at <anonymous> (turbopack:///[turbopack-node]/transforms/postcss.ts:56:14)]
    [at <anonymous>]
    [at Module.init (turbopack:///[turbopack-node]/transforms/postcss.ts:43:33)]
    [at run (turbopack:///[turbopack-node]/ipc/evaluate.ts:77:20)]

Import trace:
  Client Component Browser:
    ./ngo2/app/globals.css [Client Component Browser]
    ./ngo2/app/layout.tsx [Server Component]
[00:01:45.470] Browser ERROR   ./ngo2/app/globals.css
Error evaluating Node.js code
Error: Failed to load external module file:///C:/Users/SNEHA%20PANDEY/ngo2/postcss.config.js: SyntaxError: Unexpected token ':'
    [at Context.externalImport (turbopack:///[turbopack]/shared-node/base-externals-utils.ts:16:11)]
    [at async <anonymous> (turbopack:///[project]/ngo2/postcss.config.js_.loader.mjs:9:13)]

Import trace:
  Client Component Browser:
    ./ngo2/app/globals.css [Client Component Browser]
    ./ngo2/app/layout.tsx [Server Component]
[00:01:45.470] Browser ERROR   ./ngo2/postcss.config.js:2:25
Parsing ecmascript source code failed
  1 | plugins: {
> 2 |   '@tailwindcss/postcss': {},
    |                         ^
  3 | }
  4 |

Expected ';', '}' or <eof>
[00:01:52.469] Browser ERROR   ./ngo2/app/globals.css
Error evaluating Node.js code
Error: It looks like you're trying to use `tailwindcss` directly as a PostCSS plugin. The PostCSS plugin has moved to a separate package, so to continue using Tailwind CSS with PostCSS you'll need to install `@tailwindcss/postcss` and update your PostCSS configuration.
    [at at (C:\Users\SNEHA PANDEY\ngo2\node_modules\tailwindcss\dist\lib.js:38:1629)]
    [at <anonymous> (turbopack:///[turbopack-node]/transforms/postcss.ts:56:14)]
    [at <anonymous>]
    [at Module.init (turbopack:///[turbopack-node]/transforms/postcss.ts:43:33)]
    [at run (turbopack:///[turbopack-node]/ipc/evaluate.ts:77:20)]

Import trace:
  Client Component Browser:
    ./ngo2/app/globals.css [Client Component Browser]
    ./ngo2/app/layout.tsx [Server Component]
[00:03:06.427] Browser ERROR   ./ngo2/app/page.tsx:5:2
Parsing ecmascript source code failed
  3 | export default function Home() {
  4 |   return <DonationDashboard />
> 5 | }*/
    |  ^

Expression expected
[00:03:06.427] Browser ERROR   ./ngo2/app/page.tsx:5:3
Parsing ecmascript source code failed
  3 | export default function Home() {
  4 |   return <DonationDashboard />
> 5 | }*/
    |   ^

Unterminated regexp literal
[00:03:09.645] Server  LOG      ✓ Compiled in 745ms
[00:03:52.484] Server  LOG      ✓ Compiled in 396ms
[00:09:36.900] Server  LOG      ✓ Compiled in 40ms
[00:10:04.017] Server  LOG      ✓ Compiled in 19ms
[00:11:18.624] Server  LOG      ✓ Compiled in 22ms
[00:13:53.124] Server  LOG      ✓ Compiled in 20ms
[00:16:50.034] Server  LOG      ✓ Compiled in 16ms
[00:18:40.909] Server  LOG      ✓ Compiled in 16ms
[00:18:47.589] Server  LOG      ✓ Compiled in 16ms
[00:18:55.211] Server  LOG      ✓ Compiled in 20ms
[00:18:59.850] Server  LOG      ✓ Compiled in 17ms
[00:19:10.997] Server  LOG      ✓ Compiled in 23ms
[00:19:15.776] Server  LOG      ✓ Compiled in 29ms
[00:19:18.729] Server  LOG      ✓ Compiled in 27ms
[00:19:26.365] Server  LOG      ✓ Compiled in 17ms
[00:19:29.266] Server  LOG      ✓ Compiled in 16ms
[00:19:31.090] Server  LOG      ✓ Compiled in 16ms
[00:19:33.532] Server  LOG      ✓ Compiled in 23ms
[00:19:38.099] Server  LOG      ✓ Compiled in 16ms
[00:19:41.961] Server  LOG      ✓ Compiled in 16ms
